--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,12 @@
   --color-orange: #e3b577;
   --color-info: #ECEAE3;
   --color-button: #242222;
+  --color-button2: #E3B577;
   --color-text: #331A15;
   --color-p: #1B1A1A;
+  --color-product:#F5F4F1;
+  --color-icon:#D2B48C;
+  --color-icon2:#EA4744;
   --font-rancho: "Rancho", "cursive";
   --font-raleway: "Raleway", "sans-serif";
 }
